# Watcher3

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg  watcher.py
core/: ajax.py  api.py  app.py  auth.py  conf_global.ini  config.py  helpers.py  library.py  movieinfo.py  notification.py  plugins.py  postprocessing.py  proxy.py  scheduler.py  searcher.py  searchresults.py  snatcher.py  sqldb.py  trakt.py  version.py
core/downloaders/: BlackHole.py  DelugeRPC.py  DelugeWeb.py  DownloadStation.py  NzbGet.py  PutIO.py  QBittorrent.py  Sabnzbd.py  Transmission.py  __init__.py  rTorrentHTTP.py  rTorrentSCGI.py
core/providers/: base.py  newznab.py  torrent.py
core/rss/: imdb.py  popularmovies.py  predb.py
lib/CherryPy-18.8.0.dist-info/: RECORD
lib/CherrypyScheduler-0.1-py3.11.egg-info/: PKG-INFO  SOURCES.txt
lib/Mako-1.2.4.dist-info/: RECORD
lib/MarkupSafe-2.1.1.dist-info/: RECORD
lib/bencodepy-0.9.5.dist-info/: RECORD
lib/charset_normalizer-2.1.1.dist-info/: RECORD
lib/cheroot-9.0.0.dist-info/: RECORD
lib/deluge_client-0.0.0.dist-info/: METADATA  RECORD  direct_url.json
lib/docutils-0.19.dist-info/: RECORD
lib/hachoir-3.2.0.dist-info/: RECORD
lib/infi.systray-0.1.12.dist-info/: RECORD
post scripts/: deluge.py  downloadstation.py  nzbget.py  qbittorrent.py  rtorrent.py  sabnzbd.py  test.py  transmission.py
watcher3/: __init__.py  ajax.py  api.py  app.py  auth.py  conf_app.ini  conf_global.ini  config.py  helpers.py  library.py  localization.py  log.py  movieinfo.py  notification.py  plugins.py  postprocessing.py  proxy.py  scheduler.py  searcher.py  searchresults.py  snatcher.py  sqldb.py  trakt.py  version.py
(+55 files in other folders)
