[metadata]
name = Watcher3
description = Automated movie NZB & Torrent searcher and snatcher
readme = file: README.md
license = Apache license
license_files = license.txt
maintainer = Barbeque Sauce
maintainer_email = saucebarbeque@hotmail.com
dependencies =
    cherrypy
    sqlalchemy
    requests
    bencodepy
    parse-torrent-name@git+https://github.com/divijbindlish/parse-torrent-name.git@master
    deluge-client@git+https://github.com/labrys/deluge.git@master
    rtorrent_xmlrpc
    transmission-rpc
    hachoir
    xmljson
    stringscore
    cherrypyscheduler@git+https://github.com/sawyersteven/CherrypyScheduler@master
    mako
    infi.systray
classifiers =[
    # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Multimedia
    Topic :: Multimedia :: Video
    Topic :: Utilities

[options]
setup_requires =
    setuptools_scm
install_requires =
    m2r
zip_safe = false
include_package_data = true
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
